<resources>
    <string name="app_name">IDNApps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="training">Training</string>
    <string name="register">Register</string>
    <string name="contact_us">Contact Us</string>
    <string name="e_mail">E-mail</string>
</resources>
